# Lock_firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/AsyncTCP/.github/scripts/: install-platformio.sh  on-push.sh
components/AsyncTCP/.github/workflows/: push.yml
components/AsyncTCP/src/: AsyncTCP.cpp
components/ESPAsyncWebServer/: CMakeLists.txt
components/ESPAsyncWebServer/src/: WebAuthentication.cpp
components/HK-HomeKit-Lib/: CMakeLists.txt  LICENSE  idf_component.yml  library.json
components/HK-HomeKit-Lib/include/: CommonCryptoUtils.h  DigitalKeySecureContext.h  HK_HomeKit.h  HomeKey.h  ISO18013SecureContext.h  TLV8.h  hkAttestationAuth.h  hkAuthContext.h  hkFastAuth.h  hkStdAuth.h  logging.h  ndef.h  simple_tlv.h  x963kdf.h
components/HK-HomeKit-Lib/include/nlohmann/: json.hpp
components/HK-HomeKit-Lib/src/: HK_HomeKit.cpp
components/PN532/: .gitignore  CMakeLists.txt  Kconfig  library.json
components/PN532/src/: PN532.cpp  PN532.h  PN532Interface.h  PN532_SPI.cpp  PN532_SPI.h  PN532_debug.h  emulatetag.cpp  emulatetag.h  license.txt  llcp.cpp  llcp.h  mac_link.cpp  snep.cpp  snep.h
components/mpr121/: Kconfig.projbuild
data/: index.html
data/routes/: misc.html
main/: CMakeLists.txt  access_log_service.c  access_log_service.h  api_client.c  api_client.h  evtlog.c  evtlog.h  idf_component.yml  main.cpp  monitor.c  monitor.h  nvs_config.c  nvs_config.h  ota_client.c  ota_client.h  task_control.c  task_control.h  ws_client.c  ws_client.h  ws_log_upload.c  ws_log_upload.h
main/include/: config.h
(+21 files in other folders)
